--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.data.mongodb.uri=mongodb://admin:chatbot123@ec2-54-198-1-3.compute-1.amaz
 spring.data.mongodb.database=test
 # enable hot swapping
 spring.thymeleaf.cache = false
+
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
