--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>2.2.4.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
