--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.data.mongodb.uri=mongodb://admin:chatbot123@ec2-54-198-1-3.compute-1.amazonaws.com:27017/?authSource=admin&authMechanism=SCRAM-SHA-1
 spring.data.mongodb.database=test
-# enable hot swapping
-spring.thymeleaf.cache = false
+
 
 spring.resources.chain.strategy.content.enabled=true
-spring.resources.chain.strategy.content.paths=/**
-spring.resources.add-mappings=true
+
+
+
+spring.devtools.restart.enabled:  false
