--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
 			<version>0.0.20131108.vaadin1</version>
 			<scope>compile</scope>
 		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.webjars/jasmine-jquery -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jasmine-jquery</artifactId>
+			<version>1.4.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -82,6 +92,31 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>com.github.searls</groupId>
+				<artifactId>jasmine-maven-plugin</artifactId>
+				<version>2.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<preloadSources>
+						<include>https://code.jquery.com/jquery-3.2.1.min.js</include>
+						<source>src/main/resources/static/js/bootstrap.js</source>
+						<source>src/main/resources/static/js/chatbot.js</source>
+						
+					</preloadSources>
+				
+					<jsSrcDir>src/main/resources/</jsSrcDir>
+					<jsTestSrcDir>src/test/javascript</jsTestSrcDir>
+					<webDriverClassName>org.openqa.selenium.phantomjs.PhantomJSDriver</webDriverClassName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
